Modify index.html and style.css for seond branch

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <h1>Hello</h1>
     <h2>Man</h2>
+
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus deleniti explicabo fugiat commodi ipsa optio? Dicta voluptatem amet voluptates illo numquam. Provident facilis officiis quia, quaerat rem, eligendi ipsa suscipit ipsam facere hic autem. Atque eveniet consequatur placeat eligendi labore harum incidunt! Recusandae, vel esse deleniti expedita blanditiis nam magni quod ipsum animi eos architecto quidem error saepe aspernatur ad. Reprehenderit in exercitationem debitis corporis molestias, aspernatur ad error reiciendis beatae nihil tempora odio architecto iure vel fugit fugiat culpa aperiam enim maiores. Itaque quae earum ea impedit debitis id asperiores, vitae corporis tempore! Quibusdam error iusto vel nam quisquam?</p>
  
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="script.js"></script>
